<resources>
    <string name="app_name">Handy Phone</string>
    <string name="action_settings">Settings</string>
    <string name="section_format1">Frequent</string>
    <string name="section_format2">Work</string>
    <string name="section_format3">Family</string>
    <string name="section_format4">Friends</string>
    <string name="section_format">All Contacts</string>
    <string name="contact_name">Contact Name</string>
    <string name="add_new_contact">Add new Contact</string>
    <string name="add_contact">Add New Contact</string>
    <string name="name">Name</string>
    <string name="work">Work</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="enter_number">Enter Number</string>
    <string name="category">Category</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="contact_phone">Phone Number</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="update_contact">Update Contact</string>
    <string name="call">Call</string>
    <string name="msg">Message</string>
    <string name="display_contact">Display Contact</string>
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="emergency">Emergency Contact</string>
    <string name="select_from_contacts">Select from contacts</string>
    <string name="select_emergency_action">Select Emergency Action</string>
</resources>
