<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/imageborder" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:background="@drawable/imageborder"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="@color/colorBlack" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:background="@drawable/imageborder"
        android:gravity="center"
        android:hint="@string/enter_number"
        android:inputType="phone"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:text= "@string/category"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true" />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/category"
     android:gravity="center"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
     android:orientation="horizontal">


     <CheckBox
         android:id="@+id/work"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/work" />

     <CheckBox
         android:id="@+id/family"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/family" />

     <CheckBox
         android:id="@+id/friends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/friends" />
 </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_contact_button" />

</RelativeLayout>