<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/imageborder"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/imageborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textColorLink="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name"
                android:layout_alignStart="@+id/name"
                android:layout_below="@+id/name"
                android:layout_marginTop="15dp"
                android:background="@drawable/imageborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_number"
                android:inputType="phone"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textColorLink="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/work" />

                <CheckBox
                    android:id="@+id/family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/family" />

                <CheckBox
                    android:id="@+id/friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/friends" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>